--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 					</div>
 				</div>
 				<!-- /.foods-row -->
-				<div class="food-row">
+				<!-- <div class="food-row">
 					<span class="food-name">Ролл угорь стандарт</span>
 					<strong class="food-price">250 ₽</strong>
 					<div class="food-counter">
@@ -146,27 +146,7 @@
 						<span class="counter">1</span>
 						<button class="counter-button">+</button>
 					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
+				</div> -->
 				<!-- /.foods-row -->
 			</div>
 			<!-- /.modal-body -->
@@ -174,7 +154,7 @@
 				<span class="modal-pricetag">1250 ₽</span>
 				<div class="footer-buttons">
 					<button class="button button-primary">Оформить заказ</button>
-					<button class="button clear-cart">Отмена</button>
+					<button class="button clear-cart">Очистить корзину</button>
 				</div>
 			</div>
 			<!-- /.modal-footer -->
